--- a/package.json
+++ b/package.json
@@ -1,14 +1,53 @@
 {
-  "name": "create-next-example-app",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "^6.1.1",
+  "name": "@charliewilco/stepper-ui",
+  "version": "1.0.0",
+  "description": "Headless Input Stepper",
+  "main": "dist/index.js",
+  "repository": "charliewilco/react-stepper-ui",
+  "author": "Charles ⚡ <charlespeters42@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/react": "^16.4.7",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.1.0",
+    "parcel": "^1.9.7",
+    "prettier": "^1.14.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "styled-components": "^3.3.3"
+    "serve": "^9.4.0",
+    "styled-components": "^3.3.3",
+    "typescript": "^3.0.1"
+  },
+  "peerDependencies": {
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
+  },
+  "scripts": {
+    "precommit": "lint-staged",
+    "prepublish": "yarn build",
+    "example": "parcel example/index.html",
+    "build": "rm -rf dist && tsc",
+    "now-start": "serve -s dist",
+    "now-build": "parcel build ./example/index.html"
+  },
+  "lint-staged": {
+    "*.{tsx,ts,json,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "prettier": {
+    "printWidth": 95,
+    "singleQuote": true,
+    "semi": false,
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true
+  },
+  "now": {
+    "alias": "react-gluejar.now.sh",
+    "files": [
+      "src",
+      "example"
+    ]
   }
 }
